# 3D-Multithread

./: .gitignore  CMakeLists.txt  README.md  animation-app  animation.cpp  animation.mk  camera.cpp  camera.h  master.cpp  master.h  master_slave.cpp  master_slave.h  mover.cpp  mover.h  noise.h  platonic.cpp  platonic.h  rspace.h  shape.cpp  shape.h  vector.h
